// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoodsItem  Component must be created 1`] = `
<Card
  as="div"
  body={false}
>
  <CardHeader>
    Honda Civic
  </CardHeader>
  <CardText
    style={
      Object {
        "padding": "10px",
      }
    }
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.         Blanditiis provident quo quaerat repellat fuga debitis nemo voluptates         quis voluptate, dolorem modi non? Nisi, maxime a.
  </CardText>
</Card>
`;

exports[`GoodsItem  Component must be rendered after creation 1`] = `
<Card
  as="div"
  body={false}
>
  <CardHeader>
    TestFromTests
  </CardHeader>
  <CardText
    style={
      Object {
        "padding": "10px",
      }
    }
  >
    Lorem Test For Tests and Only Tests
  </CardText>
</Card>
`;
